--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
+#
+# hnery-personal-website .gitignore file
+#
+
+# Python
+__pycache__/*
+
+# henry-personal-website
+
+
+# PyCharm/IntelliJ
+*.idea/*
+out/
+
+# OS Files
+.DS_Store?
 .DS_Store
+ehthumbs.db
+Icon?
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs_vista.db
+[Dd]esktop.ini
+*.stackdump
+$RECYCLE.BIN/
