--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,6 @@ workflows:
     do-build:
         jobs:
             - build-live
-              filters:
-                branches:
-                    only:
-                        - staging
+                filters:
+                  branches:
+                      only: staging
