--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,10 @@ jobs:
         
             - checkout
 
+            - add_ssh_keys:
+                fingerprints:
+                    - "3b:0e:79:7c:c2:3c:2d:d5:db:b4:85:b7:05:0c:ad:d1"
+
             - run:
                 name: build-deploy
                 command: |
