--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,20 +18,38 @@ jobs:
                     - "3b:0e:79:7c:c2:3c:2d:d5:db:b4:85:b7:05:0c:ad:d1"
 
             - run:
-                name: build-deploy-staging
-                command: |
-                    rsync -avz --delete -e 'ssh -p 53122 -o StrictHostKeyChecking=no' --omit-dir-times --exclude='.git/' --exclude='.gitignore' --exclude='.circleci/' . circleci@lon3.dustyservers.com:/var/www/staging.henrycole.uk/html/;
-            - run:
                 name: build-deploy-live
                 command: |
                     echo "Hello!"
-                filters:
-                    branches:
-                        only: 
-                            - main
+    build-staging:
+        docker:
+            - image: ubuntu
+        steps:
+            - run:
+                name: build-dependencies
+                command: |
+                    apt update;
+                    apt install -y git rsync;
+        
+            - checkout
+
+            - add_ssh_keys:
+                fingerprints:
+                    - "3b:0e:79:7c:c2:3c:2d:d5:db:b4:85:b7:05:0c:ad:d1"
+
+            - run:
+                name: build-deploy-staging
+                command: |
+                    rsync -avz --delete -e 'ssh -p 53122 -o StrictHostKeyChecking=no' --omit-dir-times --exclude='.git/' --exclude='.gitignore' --exclude='.circleci/' . circleci@lon3.dustyservers.com:/var/www/staging.henrycole.uk/html/;
+ 
 
 workflows:
     do-build:
         jobs:
-            - build-live
+            - build-live:
+                filters:
+                    branches:
+                        only: 
+                            - main
+            - build-staging
 
