--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,12 +36,13 @@ jobs:
 
             - add_ssh_keys:
                 fingerprints:
-                    - "3b:0e:79:7c:c2:3c:2d:d5:db:b4:85:b7:05:0c:ad:d1"
+                    - "12:ba:6c:bd:95:18:47:94:b2:0f:38:38:16:43:f3:a5"
 
             - run:
                 name: build-deploy-staging
                 command: |
-                    rsync -avz --delete -e 'ssh -p 53122 -o StrictHostKeyChecking=no' --omit-dir-times --exclude='.git/' --exclude='.gitignore' --exclude='.circleci/' . circleci@lon3.dustyservers.com:/var/www/staging.henrycole.uk/html/;
+                    rsync -avz --delete -e 'ssh -p 53122 -o StrictHostKeyChecking=no' --omit-dir-times --exclude='.git/' --exclude='.gitignore' --exclude='.circleci/' . circleci@lon11.dustyservers.com:/etc/docker/services/henry-personal-website/srv/;
+                    ssh -p 53122 -o StrictHostKeyChecking=no circleci@lon11.dustyservers.com 'docker-compose -f /etc/docker/services/henry-personal-website/docker-compose.yml up -d --force-recreate'
  
 
 workflows:
