--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,16 @@ jobs:
                     rsync -avz --delete -e 'ssh -p ${SSH_PORT} -o StrictHostKeyChecking=no' --omit-dir-times --exclude='.git/' --exclude='.gitignore' --exclude='.circleci/' _site/. circleci@${SERVER_NAME}:${PROD_PATH};
 
     build-staging:
+        parameters:
+            server-name:
+                type: env_var_name
+                default: SERVER_NAME
+            ssh-port:
+                type: env_var_name
+                default: SSH_PORT
+            server-path:
+                type: env_var_name
+                default: STAGING_PATH
         docker:
             - image: jekyll/jekyll:latest
         steps:
@@ -45,7 +55,7 @@ jobs:
             - run:
                 name: deploy-staging
                 command: |
-                    rsync -avz --delete -e 'ssh -p ${SSH_PORT} -o StrictHostKeyChecking=no' --omit-dir-times --exclude='.git/' --exclude='.gitignore' --exclude='.circleci/' _site/. circleci@${SERVER_NAME}:${STAGING_PATH};
+                    rsync -avz --delete -e 'ssh -p ${<< parameters.ssh-port >>} -o StrictHostKeyChecking=no' --omit-dir-times --exclude='.git/' --exclude='.gitignore' --exclude='.circleci/' _site/. circleci@${<< parameters.server-name >>}:${<< parameters.server-path >>};
 
  
 
