--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
             - run:
                 name: deploy-live
                 command: |
-                    rsync -avz --delete -e 'ssh -p ${SSH_PORT} -o StrictHostKeyChecking=no' --omit-dir-times --exclude='.git/' --exclude='.gitignore' --exclude='.circleci/' _site/. circleci@${SERVER_NAME}:${PROD_PATH};
+                    rsync -avz --delete -e 'ssh -p 53122 -o StrictHostKeyChecking=no' --omit-dir-times --exclude='.git/' --exclude='.gitignore' --exclude='.circleci/' _site/. circleci@${SERVER_NAME}:${PROD_PATH};
 
     build-staging:
         parameters:
