--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,13 +28,13 @@ jobs:
         parameters:
             server-name:
                 type: env_var_name
-                default: SERVER_NAME
+                default: $SERVER_NAME
             ssh-port:
                 type: env_var_name
-                default: SSH_PORT
+                default: $SSH_PORT
             server-path:
                 type: env_var_name
-                default: STAGING_PATH
+                default: $STAGING_PATH
         docker:
             - image: jekyll/jekyll:latest
         steps:
