--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,15 +22,11 @@ jobs:
             - run:
                 name: deploy-live
                 command: |
-                    rsync -avz --delete -e 'ssh -p 53122 -o StrictHostKeyChecking=no' --omit-dir-times --exclude='.git/' --exclude='.gitignore' --exclude='.circleci/' _site/. circleci@${SERVER_NAME}:${PROD_PATH};
+                    rsync -avz --delete -e 'ssh -p 53122 -o StrictHostKeyChecking=no' --omit-dir-times --exclude='.git/' --exclude='.gitignore' --exclude='.circleci/' _site/. circleci@lon3.dustyservers.com:/var/www/henrycole.uk/html/;
 
     build-staging:
         docker:
             - image: jekyll/jekyll:latest
-              environment:
-                SERVER_DOMAIN: $SERVER_NAME
-                SERVER_PATH: $STAGING_PATH
-                SERVER_PORT: $SSH_PORT
         steps:
             - run:
                 name: dependencies-staging
@@ -49,7 +45,7 @@ jobs:
             - run:
                 name: deploy-staging
                 command: |
-                    rsync -avz --delete -e 'ssh -p $SERVER_PORT -o StrictHostKeyChecking=no' --omit-dir-times --exclude='.git/' --exclude='.gitignore' --exclude='.circleci/' _site/. circleci@$SERVER_DOMAIN:$SERVER_PATH;
+                    rsync -avz --delete -e 'ssh -p 53122 -o StrictHostKeyChecking=no' --omit-dir-times --exclude='.git/' --exclude='.gitignore' --exclude='.circleci/' _site/. circleci@lon3.dustyservers.com:/var/www/staging.henrycole.uk/html/;
 
  
 
