--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Config for Henry Cole Personal Website #
 name: Henry Cole
 title: Henry Cole
-url: https://www.henrycole.uk/
+url: https://www.henrycole.uk
 author:
   name: Henry Cole
   twitter: henrycole
-  url: https://www.henrycole.uk/
+  url: https://www.henrycole.uk
 twitter:
   username: henrycole
   card: summary
