--- a/_config.yml
+++ b/_config.yml
@@ -27,4 +27,4 @@ staticman:
   repo: henry-personal-website
   git_provider: github
   git_provider_username: hcuk94
-  staticman_base_url: https://staticman.henrycole.uk
+  base_url: https://staticman.henrycole.uk
