updated staticman allowed origins

--- a/staticman.yml
+++ b/staticman.yml
@@ -44,6 +44,7 @@ comments:
 
     # Name of the site. Used in notification emails.
   name: "henrycole.uk"
+  allowedOrigins: ["localhost", "eduardoboucas.com"]
 
   # Notification settings. When enabled, users can choose to receive notifications
   # via email when someone adds a reply or a new comment. This requires an account
