added dynamic staging tweaks

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,12 @@ jobs:
             - checkout
 
             - run:
+                name: copyconfig-staging
+                command: |
+                    cp _config.staging.yml _config.yml
+                    cp staticman.staging.yml staticman.yml
+
+            - run:
                 name: build-staging
                 command: |
                     chmod -R 777 ~/
