fixed staging config branch name

--- a/_config.staging.yml
+++ b/_config.staging.yml
@@ -2,7 +2,7 @@
 name: Henry Cole
 title: Henry Cole
 url: https://www.henrycole.uk
-branch: main
+branch: staging
 author:
   name: Henry Cole
   twitter: henrycole
