global comments setting

--- a/_config.staging.yml
+++ b/_config.staging.yml
@@ -3,6 +3,7 @@ name: Henry Cole
 title: Henry Cole
 url: https://www.henrycole.uk
 branch: staging
+comments: true
 author:
   name: Henry Cole
   twitter: henrycole
