--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ name: Henry Cole
 title: Henry Cole
 url: https://www.henrycole.uk
 branch: main
+comments: true
 author:
   name: Henry Cole
   twitter: henrycole
