--- a/staticman.yml
+++ b/staticman.yml
@@ -9,6 +9,12 @@ comments-staging:
   commitMessage: "New comment added on blog post"
   filename: "entry{@timestamp}"
   format: "yaml"
+  akismet.enabled: true
+  akismet.author: "name"
+  akismet.authorEmail: "email"
+  akismet.authorUrl: "url"
+  akismet.content: "message"
+  akismet.type: "comment"
   generatedFields:
     date:
       type: date
