enabled akismet for prod site

--- a/staticman.yml
+++ b/staticman.yml
@@ -36,6 +36,13 @@ comments:
   commitMessage: "New comment added on blog post"
   filename: "entry{@timestamp}"
   format: "yaml"
+  akismet:
+      enabled: enable
+      author: "name"
+      authorEmail: "email"
+      authorUrl: "url"
+      content: "message"
+      type: "comment"
   generatedFields:
     date:
       type: date
