--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,15 +12,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the site in the jekyll/builder container
+    - name: Build Site 
+      uses: actions/checkout@v3
       run: |
         docker run \
         -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
         jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future"
         
     - name: Set up WireGuard
-    - uses: egor-tensin/setup-wireguard@v1
+      uses: egor-tensin/setup-wireguard@v1
       with:
        endpoint: '${{ secrets.ENDPOINT }}'
        endpoint_public_key: '${{ secrets.ENDPOINT_PUBLIC }}'
