--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,10 +1,10 @@
-name: Production Build & Deploy
+name: Staging Build & Deploy
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "staging" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "staging" ]
 
 jobs:
   build:
