--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -30,7 +30,13 @@ jobs:
        allowed_ips: '${{ secrets.WG_ALLOWEDIPS }}'
        private_key: '${{ secrets.WG_PRIVKEY }}'
 
-    - name: List files
-      run: ls -lh .
+    - name: Copy Files
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USER }}
+        key: ${{ secrets.SSH_KEY }}
+        source: "."
+        target: "/var/www/staging.henrycole.uk/html/"
 
 
