--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "staging" ]
 
 jobs:
-  build:
+  build-and-deploy:
 
     runs-on: ubuntu-latest
 
@@ -32,9 +32,6 @@ jobs:
        ips: '${{ secrets.WG_IPS }}'
        allowed_ips: '${{ secrets.WG_ALLOWEDIPS }}'
        private_key: '${{ secrets.WG_PRIVKEY }}'
-
-
-
 
     - name: Copy Files
       uses: appleboy/scp-action@master
