maybe this will work?

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,8 +41,8 @@ jobs:
         source: "_site/*"
         target: "/var/www/henrycole.uk/html"
 
-    - name: Show routes
-      run: ip route show
+    - name: Add route for www2
+      run: ip route add 10.200.0.0/16 dev wg0
 
     - name: Deploy to Server - www2
       uses: appleboy/scp-action@master
