--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,9 @@ jobs:
         target: "/var/www/henrycole.uk/html"
 
     - name: Add route for www2
-      run: ip route add 10.200.0.0/16 via 10.100.0.1
+      run: |
+        ifname=$(ls /sys/class/net/ | grep '^wg')
+        sudo ip route add 10.200.0.0/16 dev $ifname
 
     - name: Deploy to Server - www2
       uses: appleboy/scp-action@master
