--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,16 +35,16 @@ jobs:
         ifname=$(ls /sys/class/net/ | grep '^wg')
         sudo ip route add 10.200.0.0/16 dev $ifname
 
-    # - name: Deploy to Server - www1
-    #   uses: appleboy/scp-action@master
-    #   with:
-    #     host: ${{ secrets.SSH_HOST_WWW1 }}
-    #     username: ${{ secrets.SSH_USER }}
-    #     key: ${{ secrets.SSH_KEY }}
-    #     rm: true
-    #     strip_components: 1
-    #     source: "_site/*"
-    #     target: "/var/www/henrycole.uk/html"
+    - name: Deploy to Server - www1
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.SSH_HOST_WWW1 }}
+        username: ${{ secrets.SSH_USER }}
+        key: ${{ secrets.SSH_KEY }}
+        rm: true
+        strip_components: 1
+        source: "_site/*"
+        target: "/var/www/henrycole.uk/html"
 
     - name: Deploy to Server - www2
       uses: appleboy/scp-action@master
