--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,10 @@ jobs:
        allowed_ips: '${{ secrets.WG_ALLOWEDIPS }}'
        private_key: '${{ secrets.WG_PRIVKEY }}'
 
-    - name: Add Routes
-      run: |
-        ifname=$(ls /sys/class/net/ | grep '^wg')
-        sudo ip route add 10.200.0.0/16 dev $ifname
+#    - name: Add Routes
+#      run: |
+#        ifname=$(ls /sys/class/net/ | grep '^wg')
+#        sudo ip route add 10.200.0.0/16 dev $ifname
 
     - name: Deploy to Server - www1
       uses: appleboy/scp-action@master
