--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -12,6 +12,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
+    - name: Set Timezone
+      uses: szenius/set-timezone@v1.2
+      with:
+        timezoneLinux: "Europe/London"
+
     - name: Checkout
       uses: actions/checkout@v3
 
